[project]
name = "aws-durable-execution-docs"
version = "0.1.0"

[project.optional-dependencies]
# pip install -e ".[docs]"
docs = [
    "zensical",
    "mdformat",
    "mdformat-mkdocs",
    "codespell",
]

[tool.mdformat]
wrap = 88
number = true
extensions = ["mkdocs"]

[tool.codespell]
skip = "*.lock"
