[project]
name = "aws-durable-execution-docs"
version = "0.1.0"

[project.optional-dependencies]
# pip install -e ".[docs]"
docs = [
    "zensical",
    "mdformat",
    "mdformat-mkdocs",
    "mdformat-gfm",
    "codespell",
]

[tool.mdformat]
wrap = 88
number = true
extensions = ["mkdocs", "tables"]

[tool.codespell]
skip = "*.lock"
